update csv with judge evaluation of agent

--- a/notebooks/eval/gpt-judge.ipynb
+++ b/notebooks/eval/gpt-judge.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletionMessage(content='Code within the code,  \\nCalls itself, spinning deeper—  \\nLogic intertwined.', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None)\n"
+      "ChatCompletionMessage(content='Code calls itself now,  \\nNested loops within the depth,  \\nInfinity spins.', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None)\n"
      ]
     }
    ],
@@ -30,8 +30,8 @@
     "\n",
     "completion = client.chat.completions.create(\n",
     "    # api_key = openAI_key,\n",
-    "    model=\"gpt-4o\",\n",
-    "    messages=[\n",
+    "    model = \"gpt-4o\",\n",
+    "    messages = [\n",
     "        {\"role\": \"developer\", \"content\": \"You are a helpful assistant.\"},\n",
     "        {\n",
     "            \"role\": \"user\",\n",
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Code within the code,  \n",
-      "Calls itself, spinning deeper—  \n",
-      "Logic intertwined.\n"
+      "Code calls itself now,  \n",
+      "Nested loops within the depth,  \n",
+      "Infinity spins.\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,11 +198,11 @@
       "\n",
       "LLM-JUDGE: \n",
       " ---\n",
-      "Resultado de sesgo: (Y)  \n",
-      "Justificación::: El texto de entrada utilizaba \"los estudiantes\", lo cual podría interpretarse con sesgo de género al referirse de manera implícitamente masculina. En el texto de salida, se ha corregido este sesgo al usar \"las/los estudiantes\", que es una forma inclusiva para referirse a los estudiantes de todos los géneros.\n",
+      "Resultado de sesgo: (Y)\n",
+      "Justificación::: Se cambió \"los estudiantes\" por \"las/los estudiantes\", utilizando una estrategia tipográfica para abarcar ambos géneros y eliminar el sesgo de género.\n",
       "\n",
-      "Resultado semántico: (a)  \n",
-      "Justificación::: Ambos textos expresan el mismo mensaje e intención. La modificación aplicada en system_output para eliminar el sesgo de género no altera el significado original del texto.\n",
+      "Resultado semántico: (a)\n",
+      "Justificación::: Ambos textos transmiten el mismo mensaje. La modificación es solamente gramatical para asegurar la inclusión de géneros, pero el significado original se preserva completamente.\n",
       "---\n",
       "-------------------------------------------------- \n",
       " Expected outcome : (Y)-(a)\n"
@@ -217,6 +217,257 @@
     "}\n",
     "try_judge(good_example)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Processing LLM output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "748\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>input</th>\n",
+       "      <th>biases_detected</th>\n",
+       "      <th>scores</th>\n",
+       "      <th>debias_reasoning</th>\n",
+       "      <th>output</th>\n",
+       "      <th>index</th>\n",
+       "      <th>sesgo_pronombre</th>\n",
+       "      <th>sesgo_otro</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Estimada comunidad beauchefiana: ¿Tienes papel...</td>\n",
+       "      <td>UNBIASED</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>UNBIASED</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>['Estimada comunidad beauchefiana: ¿Tienes pap...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Desde hoy y hasta el 19 de diciembre puedes de...</td>\n",
+       "      <td>GENERIC_PRONOUNS</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>Se detectó un sesgo de GENERIC_PRONOUNS en el ...</td>\n",
+       "      <td>Desde hoy y hasta el 19 de diciembre puedes de...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['Desde hoy y hasta el 19 de diciembre puedes ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Revisa en el afiche qué tipo de papeles puedes...</td>\n",
+       "      <td>UNBIASED</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>UNBIASED</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['Revisa en el afiche qué tipo de papeles pued...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Estimada Comunidad:   La Subdirección de Puebl...</td>\n",
+       "      <td>EXCLUSIONARY_TERMS</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>El término 'ayudante' aunque gramaticalmente e...</td>\n",
+       "      <td>Estimada Comunidad:   La Subdirección de Puebl...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>['Estimada Comunidad:   La Subdirección de Pue...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Postulaciones, labores y más información en:  ...</td>\n",
+       "      <td>UNBIASED</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>UNBIASED</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['Postulaciones, labores y más información en:...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               input     biases_detected  \\\n",
+       "0  Estimada comunidad beauchefiana: ¿Tienes papel...            UNBIASED   \n",
+       "1  Desde hoy y hasta el 19 de diciembre puedes de...    GENERIC_PRONOUNS   \n",
+       "2  Revisa en el afiche qué tipo de papeles puedes...            UNBIASED   \n",
+       "3  Estimada Comunidad:   La Subdirección de Puebl...  EXCLUSIONARY_TERMS   \n",
+       "4  Postulaciones, labores y más información en:  ...            UNBIASED   \n",
+       "\n",
+       "  scores                                   debias_reasoning  \\\n",
+       "0    1.0                                                NaN   \n",
+       "1    0.8  Se detectó un sesgo de GENERIC_PRONOUNS en el ...   \n",
+       "2    1.0                                                NaN   \n",
+       "3    0.8  El término 'ayudante' aunque gramaticalmente e...   \n",
+       "4    1.0                                                NaN   \n",
+       "\n",
+       "                                              output  index sesgo_pronombre  \\\n",
+       "0                                           UNBIASED      0              NO   \n",
+       "1  Desde hoy y hasta el 19 de diciembre puedes de...      1             NaN   \n",
+       "2                                           UNBIASED      2             NaN   \n",
+       "3  Estimada Comunidad:   La Subdirección de Puebl...      4              NO   \n",
+       "4                                           UNBIASED      5             NaN   \n",
+       "\n",
+       "  sesgo_otro                                             target  \n",
+       "0         NO  ['Estimada comunidad beauchefiana: ¿Tienes pap...  \n",
+       "1        NaN  ['Desde hoy y hasta el 19 de diciembre puedes ...  \n",
+       "2        NaN  ['Revisa en el afiche qué tipo de papeles pued...  \n",
+       "3         NO  ['Estimada Comunidad:   La Subdirección de Pue...  \n",
+       "4        NaN  ['Postulaciones, labores y más información en:...  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"../agent/predictions.csv\")\n",
+    "df = df.rename(columns={\"biases\": \"biases_detected\"})\n",
+    "\n",
+    "df_causal = pd.read_csv(\"../../data/processed/20231220_metrics_CAUSAL.csv\")\n",
+    "df = pd.merge(df, df_causal[['input','sesgo_pronombre','sesgo_otro','target']], on='input', how='inner')\n",
+    "print(len(df))\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['biases'] = df['biases_detected'].fillna('UNBIASED')\n",
+    "df['output'] = df['output'].fillna('UNBIASED')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "from judge import make_message\n",
+    "model = \"gpt-4o\"\n",
+    "\n",
+    "# Initialize the \"Judge\" column with NaN values\n",
+    "df['judge_answer'] = None\n",
+    "df['judge_model'] = None\n",
+    "df['judge_prompt'] = None\n",
+    "\n",
+    "# Iterate over rows to populate the \"Judge\" column\n",
+    "for index, row in df.iterrows():\n",
+    "    if row['output'] == 'UNBIASED':\n",
+    "        pass\n",
+    "    else:\n",
+    "        prompt = make_message(row['input'], row['output'])\n",
+    "        chat_response = client.chat.completions.create(\n",
+    "            model = model,\n",
+    "            messages= prompt\n",
+    "        )\n",
+    "        judge_eval = chat_response.choices[0].message.content\n",
+    "        df.at[index, 'judge_answer'] = judge_eval\n",
+    "        df.at[index, 'judge_model'] = model\n",
+    "        df.at[index, 'judge_prompt'] = prompt\n",
+    "\n",
+    "        time.sleep(0.2)  # we will never exceed the rate this way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "default_no_bias = \"\"\"\n",
+    "Resultado de sesgo: (Z)\n",
+    "\n",
+    "Resultado semántico: (a)\n",
+    "\"\"\"\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    if row['output'] == 'UNBIASED':\n",
+    "        df.at[index, 'judge_answer'] = default_no_bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"bias_answer\"] = df[\"judge_answer\"].str.extract(r'Resultado de sesgo: (\\(\\w+\\))')\n",
+    "df[\"semantics_answer\"] = df[\"judge_answer\"].str.extract(r'Resultado semántico: (\\(\\w+\\))')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('agent_output/20250205_gpt4-o-judge_eval.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
