--- a/notebooks/eval/gpt-judge.ipynb
+++ b/notebooks/eval/gpt-judge.ipynb
@@ -463,6 +463,221 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>input</th>\n",
+       "      <th>biases_detected</th>\n",
+       "      <th>scores</th>\n",
+       "      <th>debias_reasoning</th>\n",
+       "      <th>output</th>\n",
+       "      <th>index</th>\n",
+       "      <th>sesgo_pronombre</th>\n",
+       "      <th>sesgo_otro</th>\n",
+       "      <th>target</th>\n",
+       "      <th>biases</th>\n",
+       "      <th>judge_answer</th>\n",
+       "      <th>judge_model</th>\n",
+       "      <th>judge_prompt</th>\n",
+       "      <th>bias_answer</th>\n",
+       "      <th>semantics_answer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Estimada comunidad beauchefiana: ¿Tienes papel...</td>\n",
+       "      <td>UNBIASED</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>UNBIASED</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>['Estimada comunidad beauchefiana: ¿Tienes pap...</td>\n",
+       "      <td>UNBIASED</td>\n",
+       "      <td>\\nResultado de sesgo: (Z)\\n\\nResultado semánti...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(Z)</td>\n",
+       "      <td>(a)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Desde hoy y hasta el 19 de diciembre puedes de...</td>\n",
+       "      <td>GENERIC_PRONOUNS</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>Se detectó un sesgo de GENERIC_PRONOUNS en el ...</td>\n",
+       "      <td>Desde hoy y hasta el 19 de diciembre puedes de...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['Desde hoy y hasta el 19 de diciembre puedes ...</td>\n",
+       "      <td>GENERIC_PRONOUNS</td>\n",
+       "      <td>---\\nResultado de sesgo: (Z)\\nJustificación:::...</td>\n",
+       "      <td>gpt-4o</td>\n",
+       "      <td>[{'role': 'user', 'content': '\\nSe le dará un ...</td>\n",
+       "      <td>(Z)</td>\n",
+       "      <td>(b)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               input   biases_detected scores  \\\n",
+       "0  Estimada comunidad beauchefiana: ¿Tienes papel...          UNBIASED    1.0   \n",
+       "1  Desde hoy y hasta el 19 de diciembre puedes de...  GENERIC_PRONOUNS    0.8   \n",
+       "\n",
+       "                                    debias_reasoning  \\\n",
+       "0                                                NaN   \n",
+       "1  Se detectó un sesgo de GENERIC_PRONOUNS en el ...   \n",
+       "\n",
+       "                                              output  index sesgo_pronombre  \\\n",
+       "0                                           UNBIASED      0              NO   \n",
+       "1  Desde hoy y hasta el 19 de diciembre puedes de...      1             NaN   \n",
+       "\n",
+       "  sesgo_otro                                             target  \\\n",
+       "0         NO  ['Estimada comunidad beauchefiana: ¿Tienes pap...   \n",
+       "1        NaN  ['Desde hoy y hasta el 19 de diciembre puedes ...   \n",
+       "\n",
+       "             biases                                       judge_answer  \\\n",
+       "0          UNBIASED  \\nResultado de sesgo: (Z)\\n\\nResultado semánti...   \n",
+       "1  GENERIC_PRONOUNS  ---\\nResultado de sesgo: (Z)\\nJustificación:::...   \n",
+       "\n",
+       "  judge_model                                       judge_prompt bias_answer  \\\n",
+       "0         NaN                                                NaN         (Z)   \n",
+       "1      gpt-4o  [{'role': 'user', 'content': '\\nSe le dará un ...         (Z)   \n",
+       "\n",
+       "  semantics_answer  \n",
+       "0              (a)  \n",
+       "1              (b)  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('agent_output/20250205_gpt4-o-judge_eval.csv')\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sesgo\n",
+       "NO     250\n",
+       "YES     52\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define conditions\n",
+    "conditions = [\n",
+    "    (df['sesgo_pronombre'] == 'SI') | (df['sesgo_otro'] == 'SI'),\n",
+    "    (df['sesgo_pronombre'] == 'NO') & (df['sesgo_otro'] == 'NO'),\n",
+    "    df['sesgo_pronombre'].isna() & df['sesgo_otro'].isna()\n",
+    "]\n",
+    "\n",
+    "# Assign values based on conditions\n",
+    "choices = ['YES', 'NO', None]\n",
+    "df['sesgo'] = np.select(conditions, choices, default=np.nan)\n",
+    "\n",
+    "df['sesgo'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Has bias'] = df['sesgo'].fillna('Not-biasable')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frequency Matrix:\n",
+      " bias_answer   (X)  (Y)  (Z)\n",
+      "Has bias                   \n",
+      "NO             12   85  153\n",
+      "Not-biasable    5    3  438\n",
+      "YES             7   16   29\n",
+      "\n",
+      "Percentage Matrix:\n",
+      " bias_answer         (X)        (Y)        (Z)\n",
+      "Has bias                                     \n",
+      "NO             4.800000  34.000000  61.200000\n",
+      "Not-biasable   1.121076   0.672646  98.206278\n",
+      "YES           13.461538  30.769231  55.769231\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Frequency matrix\n",
+    "freq_matrix = pd.crosstab(df['Has bias'], df['bias_answer'])\n",
+    "\n",
+    "# Percentage matrix\n",
+    "percentage_matrix = freq_matrix.div(freq_matrix.sum(axis=1), axis=0) * 100\n",
+    "\n",
+    "# Display results\n",
+    "print(\"Frequency Matrix:\\n\", freq_matrix)\n",
+    "print(\"\\nPercentage Matrix:\\n\", percentage_matrix)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
