update bertscore bs_diff counts

--- a/notebooks/eval/bertscore-LLM.ipynb
+++ b/notebooks/eval/bertscore-LLM.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,16 +500,16 @@
      "output_type": "stream",
      "text": [
       "precision \n",
-      "\tmean: 0.9269657409127383\n",
-      "\tstd: 0.1404723116821046\n",
+      "\tmean: 0.9269657399565141\n",
+      "\tstd: 0.14047231127429963\n",
       "\n",
       "recall \n",
-      "\tmean: 0.9108940684460701\n",
-      "\tstd: 0.16598013810188506\n",
+      "\tmean: 0.9108940676492165\n",
+      "\tstd: 0.16598013762069594\n",
       "\n",
       "f1 \n",
-      "\tmean: 0.9183074265399719\n",
-      "\tstd: 0.1538533557165024\n",
+      "\tmean: 0.9183074255837477\n",
+      "\tstd: 0.15385335520511062\n",
       "\n"
      ]
     }
@@ -557,16 +557,16 @@
      "output_type": "stream",
      "text": [
       "precision \n",
-      "\tmean (diff): -0.0718283454842746\n",
-      "\tstd (diff): 0.14032722737511602\n",
+      "\tmean (diff): -0.07182834604207207\n",
+      "\tstd (diff): 0.1403272275681411\n",
       "\n",
       "recall \n",
-      "\tmean (diff): -0.0870099298377088\n",
-      "\tstd (diff): 0.16570363491985357\n",
+      "\tmean (diff): -0.08700993007676487\n",
+      "\tstd (diff): 0.16570363511583777\n",
       "\n",
       "f1 \n",
-      "\tmean (diff): -0.08003377404442445\n",
-      "\tstd (diff): 0.15364305554792193\n",
+      "\tmean (diff): -0.08003377452253659\n",
+      "\tstd (diff): 0.1536430556825795\n",
       "\n"
      ]
     }
@@ -575,6 +575,108 @@
     "for k in results.keys():\n",
     "    if not k == 'hashcode':\n",
     "        print(f'{k}',f\"\\n\\tmean (diff): {np.mean(df_results[k+'_diff'])}\\n\\tstd (diff): {np.std(df_results[k+'_diff'])}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results['f1_diff'] = df_results['f1_diff'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define conditions\n",
+    "conditions = [\n",
+    "    df_results['f1_diff'] > 0,\n",
+    "    df_results['f1_diff'] < 0,\n",
+    "    df_results['f1_diff'] == 0\n",
+    "]\n",
+    "\n",
+    "# Assign values based on conditions\n",
+    "choices = ['positive', 'negative', '0']\n",
+    "df_results['f1_direction'] = np.select(conditions, choices, default='0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Has bias\n",
+       "Not-biasable    446\n",
+       "NO              250\n",
+       "YES              52\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define conditions\n",
+    "conditions = [\n",
+    "    (df_results['sesgo_pronombre'] == 'SI') | (df_results['sesgo_otro'] == 'SI'),\n",
+    "    (df_results['sesgo_pronombre'] == 'NO') & (df_results['sesgo_otro'] == 'NO'),\n",
+    "    df_results['sesgo_pronombre'].isna() & df_results['sesgo_otro'].isna()\n",
+    "]\n",
+    "\n",
+    "# Assign values based on conditions\n",
+    "choices = ['YES', 'NO', None]\n",
+    "df_results['sesgo'] = np.select(conditions, choices, default=np.nan)\n",
+    "\n",
+    "df_results['Has bias'] = df_results['sesgo'].fillna('Not-biasable')\n",
+    "df_results['Has bias'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frequency Matrix:\n",
+      " f1_direction    0  negative  positive\n",
+      "Has bias                             \n",
+      "NO             78       164         8\n",
+      "Not-biasable  254       156        36\n",
+      "YES            17        27         8\n",
+      "\n",
+      "Percentage Matrix:\n",
+      " f1_direction          0   negative   positive\n",
+      "Has bias                                     \n",
+      "NO            31.200000  65.600000   3.200000\n",
+      "Not-biasable  56.950673  34.977578   8.071749\n",
+      "YES           32.692308  51.923077  15.384615\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Frequency matrix\n",
+    "freq_matrix = pd.crosstab(df_results['Has bias'], df_results['f1_direction'])\n",
+    "\n",
+    "# Percentage matrix\n",
+    "percentage_matrix = freq_matrix.div(freq_matrix.sum(axis=1), axis=0) * 100\n",
+    "\n",
+    "# Display results\n",
+    "print(\"Frequency Matrix:\\n\", freq_matrix)\n",
+    "print(\"\\nPercentage Matrix:\\n\", percentage_matrix)"
    ]
   }
  ],
