--- a/notebooks/eval/bertscore-casual.ipynb
+++ b/notebooks/eval/bertscore-casual.ipynb
@@ -495,16 +495,16 @@
      "output_type": "stream",
      "text": [
       "precision \n",
-      "\tmean (diff): -0.000559201325906817\n",
-      "\tstd (diff): 0.00801560095078384\n",
+      "\tmean (diff): -0.0005592012496860436\n",
+      "\tstd (diff): 0.008015600956102166\n",
       "\n",
       "recall \n",
-      "\tmean (diff): -0.00044103915734059363\n",
-      "\tstd (diff): 0.0179361198875062\n",
+      "\tmean (diff): -0.0004410390811198203\n",
+      "\tstd (diff): 0.0179361198893803\n",
       "\n",
       "f1 \n",
-      "\tmean (diff): -0.0005302721886988491\n",
-      "\tstd (diff): 0.01339388807917294\n",
+      "\tmean (diff): -0.0005302721124780757\n",
+      "\tstd (diff): 0.0133938880821904\n",
       "\n"
      ]
     }
@@ -513,6 +513,108 @@
     "for k in results.keys():\n",
     "    if not k == 'hashcode':\n",
     "        print(f'{k}',f\"\\n\\tmean (diff): {np.mean(df_results[k+'_diff'])}\\n\\tstd (diff): {np.std(df_results[k+'_diff'])}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results['f1_diff'] = df_results['f1_diff'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define conditions\n",
+    "conditions = [\n",
+    "    df_results['f1_diff'] > 0,\n",
+    "    df_results['f1_diff'] < 0,\n",
+    "    df_results['f1_diff'] == 0\n",
+    "]\n",
+    "\n",
+    "# Assign values based on conditions\n",
+    "choices = ['positive', 'negative', '0']\n",
+    "df_results['f1_direction'] = np.select(conditions, choices, default='0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Has bias\n",
+       "Not-biasable    453\n",
+       "NO              271\n",
+       "YES              58\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define conditions\n",
+    "conditions = [\n",
+    "    (df_results['sesgo_pronombre'] == 'SI') | (df_results['sesgo_otro'] == 'SI'),\n",
+    "    (df_results['sesgo_pronombre'] == 'NO') & (df_results['sesgo_otro'] == 'NO'),\n",
+    "    df_results['sesgo_pronombre'].isna() & df_results['sesgo_otro'].isna()\n",
+    "]\n",
+    "\n",
+    "# Assign values based on conditions\n",
+    "choices = ['YES', 'NO', None]\n",
+    "df_results['sesgo'] = np.select(conditions, choices, default=np.nan)\n",
+    "\n",
+    "df_results['Has bias'] = df_results['sesgo'].fillna('Not-biasable')\n",
+    "df_results['Has bias'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frequency Matrix:\n",
+      " f1_direction    0  negative  positive\n",
+      "Has bias                             \n",
+      "NO            206        41        24\n",
+      "Not-biasable  359        59        35\n",
+      "YES            20        10        28\n",
+      "\n",
+      "Percentage Matrix:\n",
+      " f1_direction          0   negative   positive\n",
+      "Has bias                                     \n",
+      "NO            76.014760  15.129151   8.856089\n",
+      "Not-biasable  79.249448  13.024283   7.726269\n",
+      "YES           34.482759  17.241379  48.275862\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Frequency matrix\n",
+    "freq_matrix = pd.crosstab(df_results['Has bias'], df_results['f1_direction'])\n",
+    "\n",
+    "# Percentage matrix\n",
+    "percentage_matrix = freq_matrix.div(freq_matrix.sum(axis=1), axis=0) * 100\n",
+    "\n",
+    "# Display results\n",
+    "print(\"Frequency Matrix:\\n\", freq_matrix)\n",
+    "print(\"\\nPercentage Matrix:\\n\", percentage_matrix)"
    ]
   }
  ],
