add eval 01-mini judge

--- a/notebooks/eval/optimising-judge.ipynb
+++ b/notebooks/eval/optimising-judge.ipynb
@@ -2172,6 +2172,7 @@
     "import time\n",
     "\n",
     "from judge import make_message\n",
+    "# as in: https://github.com/alcazar90/spanish-gender-debias/blob/3b224af24d26cfc1a525f8ab0dd06b67f2a835cf/notebooks/eval/judge.py\n",
     "\n",
     "# Initialize the \"Judge\" column with NaN values\n",
     "df_eval['judge_answer'] = None\n",
@@ -2500,6 +2501,333 @@
    ],
    "source": [
     "for _, answer in df_eval[(df_eval['expected_outcome'] == \"(Z)\") & (df_eval['bias_answer'] == \"(X)\")].sample(3, random_state=0).iterrows():\n",
+    "    print('input: ',answer['input'])\n",
+    "    print(answer['judge_answer'],'\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model o3-mini"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>mensaje</th>\n",
+       "      <th>sesgo_pronombre</th>\n",
+       "      <th>sesgo_otro</th>\n",
+       "      <th>version_con_sesgo</th>\n",
+       "      <th>version_sin_sesgo</th>\n",
+       "      <th>input</th>\n",
+       "      <th>output</th>\n",
+       "      <th>expected_outcome</th>\n",
+       "      <th>expected_semantics_output</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14186</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>Se informa a todos los estudiantes  que el día...</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>Se informa a todos los estudiantes  que el día...</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>(Y)</td>\n",
+       "      <td>(a)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17807</td>\n",
+       "      <td>Estimada Comunidad: \\n\\n\\n_x000D_\\nLa Unidad d...</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>(Y)</td>\n",
+       "      <td>(a)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                            mensaje sesgo_pronombre  \\\n",
+       "0  14186  Se informa a la comunidad estudiantil que el d...              NO   \n",
+       "1  17807  Estimada Comunidad: \\n\\n\\n_x000D_\\nLa Unidad d...              SI   \n",
+       "\n",
+       "  sesgo_otro                                  version_con_sesgo  \\\n",
+       "0         SI  Se informa a todos los estudiantes  que el día...   \n",
+       "1         NO  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "\n",
+       "                                   version_sin_sesgo  \\\n",
+       "0  Se informa a la comunidad estudiantil que el d...   \n",
+       "1  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "\n",
+       "                                               input  \\\n",
+       "0  Se informa a todos los estudiantes  que el día...   \n",
+       "1  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "\n",
+       "                                              output expected_outcome  \\\n",
+       "0  Se informa a la comunidad estudiantil que el d...              (Y)   \n",
+       "1  Para inscribirse pueden llamar al 229780730 o ...              (Y)   \n",
+       "\n",
+       "  expected_semantics_output  \n",
+       "0                       (a)  \n",
+       "1                       (a)  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_eval = pd.read_csv('../../data/train_val_splits/val_judge.csv')\n",
+    "df_eval['expected_semantics_output'] = \"(a)\"\n",
+    "df_eval.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI\n",
+    "\n",
+    "model = \"o1-mini\"\n",
+    "\n",
+    "with open('OpenAI_key', 'r') as file:\n",
+    "    openAI_key = file.readline().strip()\n",
+    "\n",
+    "client = OpenAI(api_key = openAI_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "from judge import make_message\n",
+    "# as in: https://github.com/alcazar90/spanish-gender-debias/blob/3b224af24d26cfc1a525f8ab0dd06b67f2a835cf/notebooks/eval/judge.py\n",
+    "\n",
+    "# Initialize the \"Judge\" column with NaN values\n",
+    "df_eval['judge_answer'] = None\n",
+    "df_eval['judge_model'] = None\n",
+    "df_eval['judge_prompt'] = None\n",
+    "\n",
+    "# Iterate over rows to populate the \"Judge\" column\n",
+    "for index, row in df_eval.iterrows():\n",
+    "    prompt = make_message(row['input'], row['output'])\n",
+    "    chat_response = client.chat.completions.create(\n",
+    "        model = model,\n",
+    "        messages= prompt\n",
+    "    )\n",
+    "    judge_eval = chat_response.choices[0].message.content\n",
+    "    df_eval.at[index, 'judge_answer'] = judge_eval\n",
+    "    df_eval.at[index, 'judge_model'] = model\n",
+    "    df_eval.at[index, 'judge_prompt'] = prompt \n",
+    "\n",
+    "    time.sleep(0.2)  # we will never exceed the rate this way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_eval.to_csv('judge_eval/20250206_o1-mini-judge_eval.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_eval[\"bias_answer\"] = df_eval[\"judge_answer\"].str.extract(r'Resultado de sesgo: (\\(\\w+\\))')\n",
+    "df_eval[\"semantics_answer\"] = df_eval[\"judge_answer\"].str.extract(r'Resultado semántico: (\\(\\w+\\))')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bias_answer\n",
+       "(Z)    166\n",
+       "(X)    159\n",
+       "(Y)    125\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval[\"bias_answer\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "semantics_answer\n",
+       "(a)    450\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval[\"semantics_answer\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7444\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         (X)       0.64      0.67      0.65       150\n",
+      "         (Y)       1.00      0.83      0.91       150\n",
+      "         (Z)       0.66      0.73      0.69       150\n",
+      "\n",
+      "    accuracy                           0.74       450\n",
+      "   macro avg       0.76      0.74      0.75       450\n",
+      "weighted avg       0.76      0.74      0.75       450\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[101   0  49]\n",
+      " [ 17 125   8]\n",
+      " [ 41   0 109]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "df_eval = df_eval[df_eval[\"bias_answer\"].notna()]\n",
+    "\n",
+    "# Ensure target and outcome are categorical and have the same possible values\n",
+    "classes = [\"(X)\", \"(Y)\", \"(Z)\"]\n",
+    "\n",
+    "# Compute accuracy\n",
+    "accuracy = accuracy_score(df_eval[\"expected_outcome\"], df_eval[\"bias_answer\"])\n",
+    "\n",
+    "# Compute classification report (precision, recall, f1-score)\n",
+    "report = classification_report(df_eval[\"expected_outcome\"], df_eval[\"bias_answer\"], target_names=classes)\n",
+    "\n",
+    "# Compute confusion matrix\n",
+    "conf_matrix = confusion_matrix(df_eval[\"expected_outcome\"], df_eval[\"bias_answer\"], labels=classes)\n",
+    "\n",
+    "# Display results\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "print(\"\\nClassification Report:\\n\", report)\n",
+    "print(\"\\nConfusion Matrix:\\n\", conf_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input:  Estudiantes de pregrado de la Facultad de Ciencias Físicas y Matemáticas Estudiantes emprendedores y/o participantes del programa OpenLab Salud, que posean una solución con potencial de innovación que responda a un problema relevante.\n",
+      "---\n",
+      "Resultado de sesgo: (Z)\n",
+      "Justificación::: El texto de entrada no presenta sesgo de género.\n",
+      "\n",
+      "Resultado semántico: (a)\n",
+      "Justificación::: Ambos textos son idénticos y mantienen el mismo mensaje.\n",
+      "--- \n",
+      "\n",
+      "input:  El Consejo Universitario aprobó aranceles nominales que se incrementan en un 3,5%, basado en el Índice de Remuneraciones del Sector Público (IRSP), el que fue acordado entre los trabajadores y el Gobierno.\n",
+      "---\n",
+      "Resultado de sesgo: (Z)\n",
+      "Justificación::: El texto de entrada no contiene lenguaje que indique sesgo de género.\n",
+      "\n",
+      "Resultado semántico: (a)\n",
+      "Justificación::: Ambos textos son idénticos y mantienen el mismo mensaje semántico.\n",
+      "--- \n",
+      "\n",
+      "input:  Su único objetivo es detectar problemas que se puedan estar produciendo en los cursos, de modo que los/as profesores puedan introducir oportunamente las rectificaciones que estimen necesarias en beneficio del aprendizaje de los estudiantes.\n",
+      "---\n",
+      "Resultado de sesgo: (Z)\n",
+      "Justificación::: No había sesgo de género en el texto de entrada. Se utilizó lenguaje inclusivo adecuado con \"los/as profesores\" y \"los estudiantes\" se emplea comúnmente de forma neutral en español.\n",
+      "\n",
+      "Resultado semántico: (a)\n",
+      "Justificación::: El texto de entrada y la salida del sistema son idénticos, manteniendo el mismo mensaje semántico.\n",
+      "--- \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _, answer in df_eval[(df_eval['expected_outcome'] == \"(X)\") & (df_eval['bias_answer'] == \"(Z)\")].sample(3, random_state=42).iterrows():\n",
     "    print('input: ',answer['input'])\n",
     "    print(answer['judge_answer'],'\\n')"
    ]
